--- a/customwidget.kv
+++ b/customwidget.kv
@@ -1,103 +1,104 @@
-WinManager:
-  HomeScreen:
+WinManager: # The manager for all the screens
+  HomeScreen: # contents of home screen in here
+    id: home # Can later be identified as 'home'
+    name: "home" Can also be identified as 'home'
+
+    FloatLayout: # The layout used for this screen
+      Button: # A button on the screen
+        background_color: 0, 1, 0, 1
+        pos_hint: {"center_x": 0.55, "center_y": 0.625} # Position of the button with respect to the rest of the screen
+        text: "Enter" # Text inside the button
+        size_hint: 0.5, 0.25 # Size of the button with respect to the rest of the screen
+        on_release: # What happens when the button is pressed
+          # The labels are set to the values within the text input boxes
+          root.get_screen("home").lat_label.text = root.get_screen("home").lat_inp.text
+          root.get_screen("home").lon_label.text = root.get_screen("home").lon_inp.text
+
+          root.get_screen("map").update() # Runs the update function defined in the main.py file
+
+          app.root.current = "map" # The screen has now changed to show the screen identified as 'map'
+          root.transition.direction = "left" # Transitions to the map screen by swiping left
+
+      # A button and its properties
+      Button:
+        background_color: 0.5, 0, 1, 0.5
+        pos_hint: {"x":0, "top":1}
+        text: "Destination: "
+        size_hint: 0.3, 0.5
+
+      Button:
+        background_color: 1, 0.25, 0.25, 1
+        text: "Check map"
+        size_hint: 1, 0.5
+        on_release:
+          app.root.current = "map"
+          root.transition.direction = "left"
+
+      Button:
+        pos_hint: {"x":0.8, "top":1}
+        size_hint: 0.2, 0.2
+        on_release:
+          print("settings")
+          app.root.current = "settings"
+          root.transition.direction = "right"
+
+      # An image, represents the movement to the settings screen
+      Image:
+        source: "cog.png"
+        pos_hint: {"x":0.8, "top":1}
+        size_hint: 0.2, 0.2
+
+# The map screen and its contents
   MapScreen:
+    id: map
+    name: "map"
+
+    MapView: # shows the latitude and longitude of the part of the map to be shown, as well as how zoomed in it is
+      lat: 10
+      lon: 10
+      zoom: 5
+
+      MapMarkerPopup: # The marker on the map. A custom picture is chosen, and placed on the map at the desired coordinate
+        source: "cust_marker3.png"
+        lat: root.get_screen("map").var_lat
+        lon: root.get_screen("map").var_lon
+
+      Button:
+        text: "Back"
+        on_release:
+          app.root.current = "home"
+          root.transition.direction = "right"
+
+# The screen which will contain all the settings, the contents are defined here
   SettingsScreen:
+    name: "settings"
 
-<HomeScreen>:
-  name: "home"
+    FloatLayout:
+      # Defining a label that shows what the home location has been set to
+      Label:
+        text: "Home Location: "
+        size_hint: 0.2, 0.1
+        pos_hint: {"left":1, "top":1}
 
-  destination_input: input
+      LabelB:
+        id: home_loc
+        bcolor: 1, 1, 1, 1
+        color: 0, 0, 0, 1
+        text: "placeholder"
+        size_hint: 0.2, 0.1
+        pos_hint: {"right":0.4, "top":1}
 
-  FloatLayout:
-    Button:
-      background_color: 0, 1, 0, 1
-      pos_hint: {"center_x": 0.55, "center_y": 0.625}
-      text: "Enter"
-      size_hint: 0.5, 0.25
-      on_release:
-        root.enter_dest()
-        app.root.current = "map"
-        root.manager.transition.direction = "left"
+      Button:
+        text: "Change"
+        background_color: 1, 0.5, 0, 1
+        size_hint: 0.4, 0.1
+        pos_hint: {"left":1, "top":0.9}
+        on_release:
+          home_loc.text = root.get_screen("settings").home_loc_inp.text
 
-    Button:
-      background_color: 0.5, 0, 1, 0.5
-      pos_hint: {"x":0, "top":1}
-      text: "Destination: "
-      size_hint: 0.3, 0.5
-
-    TextInput:
-      id: input
-      pos_hint: {"center_x": 0.55, "top":1}
-      size_hint: 0.5, 0.25
-
-    Button:
-      background_color: 1, 0.25, 0.25, 1
-      text: "Check map"
-      size_hint: 1, 0.5
-      on_release:
-        app.root.current = "map"
-        root.manager.transition.direction = "left"
-
-    Button:
-      pos_hint: {"x":0.8, "top":1}
-      size_hint: 0.2, 0.2
-      on_release:
-        print("settings")
-        app.root.current = "settings"
-        root.manager.transition.direction = "right"
-    Image:
-      source: "cog.png"
-      pos_hint: {"x":0.8, "top":1}
-      size_hint: 0.2, 0.2
-
-<MapScreen>:
-  name: "map"
-
-  MapView:
-    lat: 50
-    lon: 50
-    zoom: 5
-
-    Button:
-      text: "Back"
-      on_release:
-        app.root.current = "home"
-        root.manager.transition.direction = "right"
-
-<SettingsScreen>:
-  name: "settings"
-
-  FloatLayout:
-    Label:
-      text: "Home Location: "
-      size_hint: 0.2, 0.1
-      pos_hint: {"left":1, "top":1}
-
-    LabelB:
-      id: "home_loc"
-      bcolor: 1, 1, 1, 1
-      color: 0, 0, 0, 1
-      text: "Current home loc"
-      size_hint: 0.2, 0.1
-      pos_hint: {"right":0.4, "top":1}
-
-
-    Button:
-      text: "Change"
-      background_color: 1, 0.5, 0, 1
-      size_hint: 0.4, 0.1
-      pos_hint: {"left":1, "top":0.9}
-      on_release:
-        root.change_home_loc()
-
-<PopUpDesign>:
-  FloatLayout:
-    TextInput:
-      text: "New Home Location"
-      size_hint: 0.2, 0.2
-
-    Button:
-      text: "Close"
-      size_hint: 0.2, 0.2
-      on_release:
-        app.root.get_screen('settings').close_popup()
+      Button:
+        text: "Return"
+        size_hint: 0.1, 0.1
+        on_release:
+          app.root.current = "home"
+          root.transition.direction = "left"
