Moved everything to PyCharm!

--- a/Frontend_Project_Swyft/customwidget.kv
+++ b/Frontend_Project_Swyft/customwidget.kv
@@ -146,3 +146,5 @@ WinManager:
         on_release:
           app.root.current = "home"
           root.transition.direction = "left"
+
+Please re-enter the start and target nodes
